# foundry

./: .gitignore  Cargo.toml  README.md
src/: args.rs  foundry.rs  main.rs
src/config/: Cargo.toml  lib.rs
src/file/: Cargo.toml  lib.rs  project.rs  settings.rs
src/ui/: Cargo.toml  docker.rs  lib.rs  project_panel.rs  window.rs
