[package]
name = "foundry"
version = "0.1.0"
authors = ["currysoup <sam92cutler@hotmail.co.uk>"]

[dependencies.config]
path = "src/config"

[dependencies.file]
path = "src/file"

[dependencies.ui]
path = "src/ui"

##########################
# crates.io dependencies #
##########################

[dependencies]
docopt = "*"
rustc-serialize = "0.3.14"
