[package]
name = "ui"
version = "0.0.1"
authors = ["currysoup <sam92cutler@hotmail.co.uk>"]

[lib]
name = "ui"
path = "lib.rs"

[dependencies.config]
path = "../config"

##########################
# crates.io dependencies #
##########################

[dependencies]
conrod = "0.2.0"
piston = "0.1.3"
piston2d-graphics = "0.1.4"
gfx = "0.6.*"
gfx_device_gl = "0.4.*"
piston-viewport = "0.1.0"
piston_window = "0.1.0"
piston2d-gfx_graphics = "0.1.22"
piston2d-opengl_graphics = "0.1.0"
pistoncore-glutin_window = "0.1.0"
